@@ -1,3 +1,8 @@
+Wed Feb 14 17:28:19 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/oemm/RawOEMM.java: Replace own implementation
+	of linked lists by ArrayList.
+
 Wed Feb 14 14:50:37 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/oemm/Storage.java
